--- a/cashlendar/src/app/features/login/login.component.html
+++ b/cashlendar/src/app/features/login/login.component.html
@@ -1,34 +1,38 @@
 <div class="login-container">
   <div class="login-box">
-    <h2>Login</h2>
+    <h1 class="login-title">Acesse sua conta</h1>
     <form (ngSubmit)="onSubmit()" [formGroup]="form">
-      <div class="input-container">
+      <div class="form-group">
         <label for="username">E-mail</label>
         <input
-          type="email"
           id="username"
+          type="email"
           formControlName="username"
           placeholder="Digite seu e-mail"
         />
-        <div class="error-message">
+        <div class="error-message" *ngIf='verifyControlUsername()'>
           E-mail inválido
         </div>
       </div>
 
-      <div class="input-container">
+      <div class="form-group">
         <label for="password">Senha</label>
         <input
-          type="password"
           id="password"
+          type="password"
           formControlName="password"
           placeholder="Digite sua senha"
         />
-        <div class="error-message">
+        <div class="error-message" *ngIf='verifyControlPassword()'>
           A senha é obrigatória
         </div>
       </div>
 
-      <button type="submit" [disabled]="form.invalid">Entrar</button>
+      <button type="submit" [disabled]="form.invalid" class="login-button">Entrar</button>
     </form>
+
+    <div class="login-footer">
+      <a href="#">Esqueci minha senha</a>
+    </div>
   </div>
 </div>
